# citi-bike-data

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analysis.py  citi_bike_data_pipeline.py  dbt_runner.sh  docker-compose.yaml  docker-compose.yml  fetch_data.py  main.py  prefect.yaml  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
PostgreSQL Queries/: Adding distance column.sql  Adjusting dates.sql
agent/backend/: Dockerfile  agent.py  database.py  main.py  memory.py  requirements.txt  server.py
agent/backend/tests/: test_database.py
agent/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  vite.config.ts
agent/frontend/src/: App.css  App.tsx  index.css  markdownLite.ts
citibike/: config.py  fetch_data_old.py  flows.py  ingest.py  loader.py  pipeline.py  storage.py
clickhouse/: init.sh
dags/: citibike_dag.py  citibike_pipeline.py  config.py
data/: JC-202102-citibike-tripdata.csv
dbt/: .gitignore  .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/citibike_dbt/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
dbt/citibike_dbt/models/bronze/: bronze_trips.sql
dbt/citibike_dbt/models/gold/: dim_bike_type.sql  dim_date.sql  dim_station.sql  fact_trips.sql  schema.yml
dbt/citibike_dbt/models/silver/: schema.yml  silver_trips.sql
dbt/macros/: scd_utils.sql  string_utils.sql  time_utils.sql
dbt/models/bronze/: bronze_weather.sql  schema.yml
dbt/models/gold/: dim_date.sql  dim_rider_type.sql  dim_station.sql  fact_trips.sql  schema.yml
dbt/models/silver/: int_trips_cleaned.sql  int_weather_cleaned.sql  schema.yml  silver_trips.sql  silver_trips_rejected.sql  silver_weather.sql
dbt/snapshots/: station_snapshot.sql
docs/: data_register.md
infra/clickhouse/: config.xml  init.sh
infra/postgres/: init.sh
minio/policies/: analyst-policy.json  engineer-policy.json
openmetadata/: .dockerignore  Dockerfile.ingestion  clickhouse_ingestion.yaml  dbt_clickhouse_ingestion.yaml  dbt_postgres_ingestion.yaml  minio_ingestion.yaml  postgres_ingestion.yaml
scripts/: clean_manifest.py  pipeline.py
scripts/config/: config.py
scripts/ingestion/: ingest.py  weather.py
scripts/loading/: loader.py
scripts/minio/: init.sh
scripts/openmetadata/: ingest.py  ingest.sh
scripts/orchestration/: flows.py
scripts/quality/: checks.yml  validator.py
scripts/sql/: init.sh
scripts/storage/: minio_client.py
sql/: init.sql
tests/: conftest.py  test_data_pipeline.py  test_ingest.py  test_loader.py  test_storage.py
