[project]
name = "citi-bike-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agate==1.9.1",
    "aiosqlite==0.22.1",
    "alembic==1.18.4",
    "amplitude-analytics==1.2.3",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "apprise==1.10.0",
    "asgi-lifespan==2.1.0",
    "asyncpg==0.31.0",
    "attrs==26.1.0",
    "babel==2.18.0",
    "beartype==0.22.9",
    "beautifulsoup4==4.14.3",
    "boto3==1.42.97",
    "botocore==1.42.97",
    "cachetools==7.0.6",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "clickhouse-connect==0.15.1",
    "clickhouse-driver==0.2.10",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "coolname==4.2.0",
    "cronsim==2.7",
    "cryptography==47.0.0",
    "cyclopts==4.11.0",
    "daff==1.4.2",
    "dateparser==1.4.0",
    "dbt-adapters==1.22.5",
    "dbt-clickhouse==1.10.0",
    "dbt-common==1.37.5",
    "dbt-core==1.11.8",
    "dbt-extractor==0.6.0",
    "dbt-postgres==1.10.0",
    "dbt-protos==1.0.474",
    "dbt-semantic-interfaces==0.9.0",
    "deepdiff==8.6.2",
    "docker==7.1.0",
    "docstring-parser==0.18.0",
    "docutils==0.22.4",
    "exceptiongroup==1.3.1",
    "fakeredis==2.35.1",
    "fastapi==0.136.1",
    "fsspec==2026.4.0",
    "graphviz==0.21",
    "greenlet==3.5.0",
    "griffe==2.0.2",
    "griffecli==2.0.2",
    "griffelib==2.0.2",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "humanize==4.15.0",
    "hyperframe==6.1.0",
    "idna==3.13",
    "importlib-metadata==8.7.1",
    "iniconfig==2.3.0",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "jinja2-humanize-extension==0.4.0",
    "jmespath==1.1.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "leather==0.4.1",
    "lupa==2.8",
    "lxml==6.1.0",
    "lz4==4.4.5",
    "mako==1.3.12",
    "markdown==3.10.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mashumaro==3.14",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "msgpack==1.1.2",
    "networkx==3.6.1",
    "numpy==2.4.4",
    "oauthlib==3.3.1",
    "openai>=2.44.0",
    "openlineage-python==1.47.1",
    "opentelemetry-api==1.41.1",
    "orderly-set==5.5.0",
    "orjson==3.11.8",
    "packaging==26.1",
    "pandas==3.0.2",
    "parsedatetime==2.6",
    "pathspec==0.12.1",
    "pendulum==3.2.0",
    "pluggy==1.6.0",
    "prefect==3.6.28",
    "prometheus-client==0.25.0",
    "protobuf==6.33.6",
    "psycopg2-binary==2.9.12",
    "py-key-value-aio==0.4.4",
    "pyarrow==24.0.0",
    "pycparser==3.0",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.14.0",
    "pydocket==0.19.2",
    "pygments==2.20.0",
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-json-logger==4.1.0",
    "python-slugify==8.0.4",
    "pytimeparse==1.1.8",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "readchar==4.2.2",
    "redis==7.4.0",
    "referencing==0.37.0",
    "regex==2026.4.4",
    "requests==2.33.1",
    "requests-oauthlib==2.0.0",
    "rfc3339-validator==0.1.4",
    "rich==15.0.0",
    "rich-rst==1.3.2",
    "rpds-py==0.30.0",
    "ruamel-yaml>=0.17.40",
    "ruamel-yaml-clib==0.2.15",
    "s3transfer==0.16.1",
    "semver==3.0.4",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "snowplow-tracker==1.1.0",
    "soda-core==3.5.6",
    "soda-core-postgres==3.5.6",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.3",
    "sqlalchemy==2.0.49",
    "sqlparse==0.5.5",
    "starlette==1.0.0",
    "text-unidecode==1.3",
    "toml==0.10.2",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "tzlocal==5.3.1",
    "uncalled-for==0.3.1",
    "urllib3==2.6.3",
    "uvicorn==0.46.0",
    "websockets==16.0",
    "zipp==3.23.1",
    "zstandard==0.25.0",
]
