[project]
name = "citi-bike-data"
version = "0.1.0"
description = "Citi Bike trip data pipeline: S3 ingestion to MinIO, Postgres bronze/silver layers, ClickHouse gold star schema, dbt transforms, Prefect orchestration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.97",
    "dbt-clickhouse>=1.10.0",
    "dbt-core>=1.11.8",
    "dbt-postgres>=1.10.0",
    "lxml>=6.1.0",       # bs4's XML parser backend (BeautifulSoup(..., "xml")); never imported by name
    "pandas>=3.0.2",
    "prefect>=3.6.28",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "requests>=2.33.1",
    "setuptools>=70.0.0",  # soda-core imports distutils, removed from stdlib in 3.12; setuptools' shim replaces it
    "soda-core>=3.5.6",
    "soda-core-postgres>=3.5.6",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.8.0",
]

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before these imports so env vars are set at import time.
"agent/backend/main.py" = ["E402"]
"agent/backend/server.py" = ["E402"]
